client/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Secular+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Secular+One&display=swap');

:root {
  --navbar-height: 6vh;
  --navbar-color: var(--underline-color);
  --top-padding: 2rem;
  --left-padding: 20vh;
  --underline-color: hsla(196, 61%, 58%, 0.75);
  --lef-mp-md: 3rem;
  --card-height-md: 400px;
  --card-width-md: 240px;
  --card-nf-m-md: -4rem;
  --card-fc-m-md: 2rem;
  --card-fs-m-lg: 20px;
  --card-subt-m-lg: 20px;
  --margin-md-t: 5rem;
  --footer-height: var(--navbar-height);
  --lastchild-mb: 20%;
  --padding-4px: 4px;
  --padding-1rem: 1rem;
}

body {
  background-color: whitesmoke;
  overflow-x: hidden;
}

.h-20 {
  height: 20%;
}
.h-15 {
  height: 15%;
}
.h-80 {
  height: 80%;
}
.h-85 {
  height: 85%;
}
.nav-item-right {
  padding-right: 30px;
  padding-left: 10px;
}

.Nav-logo {
  font-size: 20px;
  font-weight: bold;
  padding-left: 10px;
}

.nav-toggle {
  border: 0;
  font-size: 2vh;
}

.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
  outline: none;
  box-shadow: none;
}

a {
  text-decoration: none;
  color: black;
}

a:hover {
  color: #18272f;
}

.g-link a {
  background-image: linear-gradient(to right, #54b3d6, #54b3d6 50%, #000 50%);
  background-size: 200% 100%;
  background-position: -100%;
  display: inline-block;
  padding: 5px 0;
  position: relative;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  transition: all 0.3s ease-in-out;
}

.g-link a:before {
  content: '';
  background: #54b3d6;
  display: block;
  position: absolute;
  bottom: 1px;
  left: 0;
  width: 0;
  height: 3px;
  transition: all 0.3s ease-in-out;
}

.g-link a:hover {
  background-position: 0;
}

.g-link a:hover::before {
  width: 100%;
}

.g-link {
  /* background-color: aquamarine; */
  display: flex;
  margin: 0;
  padding-right: 20px;
}

.h2 {
  font-family: 'Poppins', sans-serif;
  font-weight: bold;
  font-size: px;
  color: black;
}

.h3 {
  font-family: 'Secular One', sans-serif;
  font-size: 0.5vw;
  margin-top: 1rem;
  font-size: 1.2rem;
  letter-spacing: 0.1rem;
  color: gray;
  margin: 0;
  padding: 0 0 1rem 0;
}

.landing {
  position: absolute;
  background: black;
  width: 101vw;
  height: 101vh;
  top: 0;
  left: 0;
  z-index: 2;
  margin: 0;
  padding: 0;

}
::-webkit-scrollbar {
  display: none;
}

.welcome {
  font-size: 2vw;
  font-family: 'Poppins', sans-serif;
}

.landing .bottom .wait {
  font-size: rem;
  font-family: 'Secular One', sans-serif;
}

.landing .landing-logo {
  color: white;
  font-size: 12px;
}

.landing .top {
  position: fixed;
  top: 5%;
  left: 0;
  font-size: 2rem;
  margin-left: 1rem;
}


.landing .loading-bottom {
  position: fixed;
  left: 1vh;
  bottom: 5vh;
  margin-left: 1rem;

}

.landing .middle {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 300px;
  height: 200px;
}

.faint {
  font-size: 1.2rem;
  letter-spacing: 0.2rem;
  color: gray;
  margin: 0;
  padding: 0 0 1rem 0;
}

.section-1 {
  background-color: white;
  width: 100%;
  height: calc(100vh - (var(--navbar-height)));
  justify-self: center;
  display: flex;
  margin: 0 auto;
}

.section-2 {
  width: 100%;
  height: calc(100vh - (var(--navbar-height)));
}

.emboss {
  font-size: 14vw;
  color: rgba(255, 255, 255, 1);
  text-transform: uppercase;
  text-shadow: -3px 1px 5px rgba(0, 0, 0, 0.3), 1px 1px 0 rgba(255, 255, 255, 1);
  font-family: 'Secular One', sans-serif;
}

.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: var(--footer-height);
  background-color: white;
  border-top: 1px solid whitesmoke;
  display: flex;
  align-items: flex-start;
  padding: 0px 30px 10px 30px;
  z-index: 1;
}

.left span {
  border: 1px solid transparent;
  border-radius: 50%;
  padding: 5px;
  background-color: whitesmoke;
  font-size: 15px;
  position: relative;
  left: 0px;
  top: 3px;
}

.test-1 {
  background-color: bisque;
}

.test-2 {
  background-color: aquamarine;
}
.test-3 {
  background-color: #54b3d6;
}
.card-body .bottom-flags {
  position: absolute;
  bottom: 20px;
  left: 10px;
  width: 100%;
}

.skills .left {
  margin-left: var(--lef-mp-md);
  background-color: white;
  height: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.skills h2 {
  font-size: 4rem;
}

.skill-item-container {
  float: left;
  margin-top: 2px;
}
.skill-item {
  border: wheat solid 1px;
  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
  border-radius: 5px;
  margin: 0 0.3rem 0.3rem 0;
  font-size: 12px;
}

.work-together {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-bottom: var(--lastchild-mb);
}

.last-section {
  background-color: white;
}
.wk-t {
  font-size: 1.5rem;
  font-family: 'Secular One', sans-serif;
}
/* ... */

